Fixes too tall body

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -695,15 +695,13 @@ strong,
 
 .content-wrap {
   position: relative;
-  min-height: 400px;
   background-image: url("/assets/images/style/page-bg.png");
   background-repeat: repeat-x;
   background-position: 0 0;
-  padding: 6rem 0 1rem 0;
+  padding: 6rem 0 2rem 0;
 }
 
 .main {
-  min-height: 100vh;
   padding: 0 1rem;
 }
 
@@ -795,6 +793,9 @@ strong,
 @media screen and (min-width: 769px) {
   .slider {
     width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -829,6 +830,13 @@ strong,
   }
   .page-wrap::after, .complete-nav-close .page-wrap::after {
     display: none;
+  }
+}
+@media screen and (min-width: 769px) {
+  .page-wrap {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
   }
 }
 
@@ -1092,6 +1100,7 @@ strong,
   border-top: 3px solid #07496d;
   border-bottom: 6px solid #07496d;
   color: white;
+  margin-top: auto;
 }
 @media screen and (min-width: 1200px) {
   .page-footer {
